# fptricks

./: Cargo.toml
.cargo/: config.toml
benches/: arith_benches.rs  batch4_benches.rs  batch_arith_benches.rs  batch_benches.rs  batch_log_benches.rs  batch_trig_benches.rs  log_benches.rs  math_benches.rs  trig_benches.rs
src/: arithmetic.rs  batch.rs  batch_arith.rs  batch_log.rs  batch_trig.rs  lib.rs  logarithmic.rs  raw_batch_arith.rs  raw_batch_log.rs  raw_batch_trig.rs  test_intrinsics.rs  trigonometric.rs
