[package]
name = "fptricks"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
criterion = "0.5"

[[bench]]
name = "arith_benches"
harness = false

[[bench]]
name = "trig_benches"
harness = false

[[bench]]
name = "log_benches"
harness = false

[[bench]]
name = "batch_arith_benches"
harness = false

[[bench]]
name = "batch_log_benches"
harness = false

[[bench]]
name = "batch_trig_benches"
harness = false

[[bench]]
name = "batch4_benches"
harness = false
